--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
-            <scope>test</scope>
+            <scope>compile</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.hamcrest</groupId>
